[package]
name = "euphony_configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
miette = "5.10.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.8.8"
dunce = "1.0.4"
