[package]
name = "euphony_configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dunce = { workspace = true }
thiserror = { workspace = true }
