[package]
name = "euphony_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euphony_configuration = { path = "../euphony_configuration" }

miette = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fs-more = { workspace = true }
